// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render <Button size="lg" /> same with snapshop 1`] = `
.c0 {
  position: relative;
  height: 55px;
  width: 183px;
  font-size: 25px;
  background: center / cover no-repeat url();
  cursor: pointer;
}

<div>
  <button
    class="c0"
  />
</div>
`;

exports[`<Button /> should render <Button size="sm" /> same with snapshop 1`] = `
.c0 {
  position: relative;
  height: 27px;
  width: 92px;
  font-size: 14px;
  background: center / cover no-repeat url();
  cursor: pointer;
}

<div>
  <button
    class="c0"
  />
</div>
`;

exports[`<Button /> should render wrapped button 1`] = `
.c1 {
  position: relative;
  height: 41px;
  width: 138px;
  font-size: 18px;
  background: center / cover no-repeat url();
  cursor: pointer;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 32px;
  height: 55px;
  width: 183px;
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1"
    >
      버튼
    </button>
  </div>
</div>
`;
